# tmp102_driver

./: CMakeLists.txt  prj.conf
boards/: esp32_devkitc_procpu.overlay  nucleo_f446re.overlay
modules/tmp102/drivers/sensor/: CMakeLists.txt  Kconfig
modules/tmp102/drivers/sensor/ti/: CMakeLists.txt  Kconfig
modules/tmp102/drivers/sensor/ti/tmp102/: CMakeLists.txt  Kconfig  tmp102.c  tmp102.h
modules/tmp102/dts/bindings/sensor/: ti,tmp102.yaml
modules/tmp102/zephyr/: module.yaml
src/: main.c
src/config/: app_config.h
